--- a/views/AnimalSpe.xml
+++ b/views/AnimalSpe.xml
@@ -2,7 +2,7 @@
 
    <record model="ir.ui.view" id="AnimalSpe_form_view">
             <field name="name">AnimalSpe.form</field>
-            <field name="model">naturalparks.AnimalSpe</field>
+            <field name="model">NaturalParks.AnimalSpe</field>
             <field name="arch" type="xml">
                 <form string="AnimalSpe Form">
                     <sheet>
@@ -13,7 +13,8 @@
                             <field name="Alimentation"/>
                             <field name="HeatSeason"/>
                             <field name="Depredated"/>
-                            <field name="AnimalID"/>
+                            <field name="AnimalIDS"/>
+                            <field name="AreaIDS"/>
                         </group>
                     </sheet>
                 </form>
@@ -22,7 +23,7 @@
 
         <record model="ir.ui.view" id="AnimalSpe_tree_view">
             <field name="name">AnimalSpe.tree</field>
-            <field name="model">naturalparks.AnimalSpe</field>
+            <field name="model">NaturalParks.AnimalSpe</field>
             <field name="arch" type="xml">
                 <form string="AnimalSpe Tree">
                     <sheet>
@@ -33,7 +34,9 @@
                             <field name="Alimentation"/>
                             <field name="HeatSeason"/>
                             <field name="Depredated"/>
-                            <field name="AnimalID"/>
+                            <field name="AnimalIDS"/>
+                            <field name="AreaIDS"/>
+
                         </group>
                     </sheet>
                 </form>
@@ -49,14 +52,25 @@
        </record>
 
        <record model="ir.ui.view" id="AnimalSpe_search_view">
-          <field name="name">AnimalSpe.search</field>
-          <field name="model">NaturalParks.AnimalSpe</field>
-          <field name="arch" type="xml">
-              <search>
-                        <field name="Name"/> 
-              </search>
-          </field>
-       </record>
+            <field name="name">AnimalSpe.search</field>
+            <field name="model">NaturalParks.AnimalSpe</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name"/>
+                    <field name="VulgarName"/>
+                    <filter name="carnivore" string="Carnivore"
+                            domain="[('Alimentation', '=', 'carnivore')]"/>
+                    <filter name="herbivore" string="Herbivore"
+                            domain="[('Alimentation', '=', 'herbivore')]"/>
+                    <filter name="omnivore" string="Omnivore"
+                            domain="[('Alimentation', '=', 'omnivore')]"/>
+                    <group string="Group By">
+                        <filter name="by_HeatSeason" string="Heat Season"
+                                context="{'group_by': 'HeatSeason'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
 
        <menuitem id="AnimalSpe_menu" name="AnimalSpe"
             parent="NaturalParks_menu"
