--- a/views/Lodging.xml
+++ b/views/Lodging.xml
@@ -7,7 +7,7 @@
               <form string="Lodging Form">
                   <sheet>
                      <group>
-                        <field name="Name"/>
+                        <field name="name"/>
                         <field name="Extension"/>
                         <field name="NaturalparkID"/>
                         <field name="CommunityID"/>
@@ -17,23 +17,13 @@
           </field>
        </record>
 
-       <record model="ir.ui.view" id="Lodging_graph_view">
-          <field name="name">Lodging.graph</field>
-          <field name="model">NaturalParks.Lodging</field>
-          <field name="arch" type="xml">
-              <graph string="Lodging graph">
-                        <field name="Name"/>
-                        <field name="Extension"/>
-              </graph>
-          </field>
-       </record>
 
        <record model="ir.ui.view" id="Lodging_tree_view">
           <field name="name">Lodging.tree</field>
           <field name="model">NaturalParks.Lodging</field>
           <field name="arch" type="xml">
               <tree string="Lodging Tree">
-                        <field name="Name"/>
+                        <field name="name"/>
                         <field name="Extension"/>
                         <field name="NaturalparkID"/>
                         <field name="CommunityID"/>                
@@ -50,14 +40,22 @@
        </record>
 
        <record model="ir.ui.view" id="Lodging_search_view">
-          <field name="name">Lodging.search</field>
-          <field name="model">NaturalParks.Lodging</field>
-          <field name="arch" type="xml">
-              <search>
-                        <field name="Name"/> 
-              </search>
-          </field>
-       </record>
+            <field name="name">Lodging.search</field>
+            <field name="model">NaturalParks.Lodging</field>
+            <field name="arch" type="xml">
+                <search>
+                    <field name="name"/>
+                    <filter name="HighCapacity" string="High Capacity"
+                            domain="[('Capacity', '&gt;', 100)]"/>
+                    <filter name="LowCapacity" string="Low Capacity"
+                            domain="[('Capacity', '&lt;', 100)]"/>
+                    <group string="Group By">
+                        <filter name="by_NaturalPark" string="Natural Parks"
+                                context="{'group_by': 'NaturalParkID'}"/>
+                    </group>
+                </search>
+            </field>
+        </record>
 
        
 
